--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
     sdk: flutter
   flutter_cupertino_localizations: ^1.0.1
   http: ^0.12.0
+  image_picker: ^0.6.0
 
 dev_dependencies:
   flutter_test:
@@ -44,7 +45,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/images/mark.png
+    - assets/images/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
