--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   flutter_cupertino_localizations: ^1.0.1
   http: ^0.12.0
   image_picker: ^0.6.0
+  uuid: ^2.0.1
+  mock_data: ^1.2.5
 
 dev_dependencies:
   flutter_test:
