--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   uuid: ^2.0.1
   mock_data: ^1.2.5
   table_calendar: ^1.2.5
+  provider: ^3.0.0+1
 
 dev_dependencies:
   flutter_test:
