--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   mock_data: ^1.2.5
   table_calendar: ^1.2.5
   connectivity: ^0.4.5
+  shared_preferences: ^0.5.3
+  sqflite: ^1.1.7
+  path: ^1.6.4
 
 dev_dependencies:
   flutter_test:
