--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   shared_preferences: ^0.5.3
   sqflite: ^1.2.0
   path: ^1.6.4
+  provider: ^4.0.0
+  tuple: ^1.0.3
 
 dev_dependencies:
   flutter_test:
