--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   flutter_localizations:
     sdk: flutter
+  json_annotation: ^2.0.0
   flutter_cupertino_localizations: ^1.0.1
   http: ^0.12.0
   image_picker: ^0.6.0
@@ -41,7 +42,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  build_runner: ^1.0.0
+  json_serializable: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
